// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty state help renders properly 1`] = `
<div
  className="blank-slate-pf"
>
  <p
    className="blank-slate-pf-helpLink"
  >
    For more information please see 
    <a
      href="#"
    >
      pfExample
    </a>
  </p>
</div>
`;

exports[`Empty state icon renders properly 1`] = `
<div
  className="blank-slate-pf"
>
  <div
    className="blank-slate-pf-icon"
  >
    <span
      aria-hidden="true"
      className="pficon pficon-add-circle-o"
    />
  </div>
</div>
`;

exports[`Empty state info renders properly 1`] = `
<div
  className="blank-slate-pf"
>
  <p
    className="blank-slate-pf-info"
  >
    This is the Empty State component.
  </p>
</div>
`;

exports[`Empty state main action renders properly 1`] = `
<div
  className="blank-slate-pf"
>
  <div
    className="blank-slate-pf-main-action"
  >
    <button
      className="btn-primary btn-lg btn btn-default"
      disabled={false}
      type="button"
    >
      Main Action
    </button>
  </div>
</div>
`;

exports[`Empty state secondary action renders properly 1`] = `
<div
  className="blank-slate-pf"
>
  <div
    className="blank-slate-pf-secondary-action"
  >
    <button
      className="btn btn-default"
      disabled={false}
      title="Perform an action"
      type="button"
    >
      Secondary Action 1
    </button>
    <button
      className="btn btn-default"
      disabled={false}
      title="Perform an action"
      type="button"
    >
      Secondary Action 2
    </button>
    <button
      className="btn btn-default"
      disabled={false}
      title="Perform an action"
      type="button"
    >
      Secondary Action 3
    </button>
  </div>
</div>
`;

exports[`Empty state title renders properly 1`] = `
<div
  className="blank-slate-pf"
>
  <h4
    className="h1 blank-slate-pf-title"
  >
    Empty State Title
  </h4>
</div>
`;
